# python-uv-template

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  mypy.ini  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: sonarqube.yml.example
.opencode/agents/: builder.md
config/: env.py
src/config/: logging_config.py
